# cgal-classification-benchmark

./: CMakeLists.txt  README.md  benchmark.cpp  plot_memory.gnuplot  run.rb
config/: semantic3d.config
data/: README.md
data_small/: README.md
include/: Args.h  Filtered_range.h  Memory_thread.h  Types.h
include/CGAL/Classification/: Point_set_feature_generator.h  Point_set_neighborhood.h
include/CGAL/Classification/Feature/: Eigenvalue.h
log/: README.md
